--- a/ChatClient/ChatClient.csproj
+++ b/ChatClient/ChatClient.csproj
@@ -38,6 +38,9 @@
     <Reference Include="ManagedUPnP">
       <HintPath>U:\Unshared\Firefox\Managed UPnP Library and Demo Source (1.8)\ManagedUPnP\bin\Release\ManagedUPnP.dll</HintPath>
     </Reference>
+    <Reference Include="Meebey.SmartIrc4net">
+      <HintPath>..\..\Meebey.SmartIrc4net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.ServiceModel" />
